@@ -33,6 +33,6 @@ K2dendro(K2res)
 
 }
 \references{
-    \insertRef{reed_2020}{K2Taxonomer}
+\insertRef{reed_2020}{K2Taxonomer}
 }
 \keyword{clustering}
