@@ -61,6 +61,6 @@ K2res <- aggregateGSVAscores(aggList, K2res)
 }
 \references{
 \insertRef{reed_2020}{K2Taxonomer}
-    \insertRef{gsva}{K2Taxonomer}
+   \insertRef{gsva}{K2Taxonomer}
 }
 \keyword{clustering}
