@@ -56,7 +56,7 @@ cKmeansWrapperSubsample(dm, cL)
 
 }
 \references{
-    \insertRef{reed_2020}{K2Taxonomer}
-    \insertRef{cKm}{K2Taxonomer}
+\insertRef{reed_2020}{K2Taxonomer}
+ \insertRef{cKm}{K2Taxonomer}
 }
 \keyword{clustering}
