@@ -33,7 +33,7 @@ K2res <- runDGEmods(K2res)
 }
 \references{
 \insertRef{reed_2020}{K2Taxonomer}
-    \insertRef{limma}{K2Taxonomer}
-    \insertRef{bh}{K2Taxonomer}
+ \insertRef{limma}{K2Taxonomer}
+ \insertRef{bh}{K2Taxonomer}
 }
 \keyword{clustering}
