@@ -60,7 +60,7 @@ K2res <- runGSVAmods(K2res,
 
 }
 \references{
-    \insertRef{reed_2020}{K2Taxonomer}
-    \insertRef{gsva}{K2Taxonomer}
+\insertRef{reed_2020}{K2Taxonomer}
+ \insertRef{gsva}{K2Taxonomer}
 }
 \keyword{clustering}
